--- a/apps/vite-solidjs/src/App.css
+++ b/apps/vite-solidjs/src/App.css
@@ -24,3 +24,20 @@
 .read-the-docs {
   color: #888;
 }
+
+.App__dogs,
+.App__dogs--input {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
+}
+
+button {
+  width: 100px;
+}
+
+input {
+  max-width: 100px;
+  padding: 7px;
+}
